# TranzBackend

./: .editorconfig  .env.example  .gitignore  README.md  cleanDatabase.js  docker-compose.yml  gtfsimport  watchScript.sh
.github/: dependabot.yml
Migrator/: DatabaseHandler.js  Dockerfile  cleanDatabase.js  gtfsimport  index.js  package.json  watch.js  watchScript.sh
ShiftParser/: Break.js  Shift.js  Special.js  Split.js  Trip.js  index.js  package.json
TranzQL/: Dockerfile  cleanDatabase.js  gtfsimport  index.d.ts  index.js  index.ts  package.json  resolvers.ts  schema.graphql  schema.js  schema.ts  tsconfig.json  watch.ts
TranzQL/resolvers/: gtfs.ts  index.ts  realtime.ts  tranz.ts
TranzQL/schema/: gtfs.graphql
TranzTracker/: .gitignore  App.js  App.tsx  BusContext.js  api.ts  app.json  package.json  styles.ts
TranzTracker/.expo/: packager-info.json
TranzTracker/android/: settings.gradle
TranzTracker/components/: BusCallout.tsx  BusListItem.tsx  BusMarker.tsx  Spinner.tsx  TitleButtons.tsx  index.ts
TranzTracker/context/: BusListContext.ts  BusListContext.tsx
TranzTracker/helpers/: CheckInStorage.ts  GoogleMapsStyles.ts  IMap.ts  functions.ts  functions.tsx  index.ts  location.ts
TranzTracker/interfaces/: api.ts  gtfs.ts  queries.ts  tranzit.ts
TranzTracker/ios/: Podfile
TranzTracker/navigators/: Base.tsx  BusInfo.tsx  BusList.tsx  Map.tsx  MapTab.tsx  index.ts
TranzTracker/screens/: BusInfo.js  BusInfo.tsx  (+7 more)
realtime-worker/: .gitignore  Cargo.toml  wrangler.example.toml
realtime-worker/src/: lib.rs
realtime-worker/worker/: worker.js
(+19 files in other folders)
