[package]
name = "realtime-worker"
version = "0.1.0"
authors = ["David Cole <david.cole1340@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
at-api-rs = "0.1"

wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.24"

serde = "1.0.126"
serde_json = "1.0.64"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[patch.crates-io]
reqwest = { git = "https://github.com/seanmonstar/reqwest", branch = "master" }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
